DRAKEN-4071: Fixed gaps in billing